/*
 * $Id: ChangeLog,v 1.1233 2003/07/10 10:52:26 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-07-10 14:34 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * include/hbapi.h
    ! fixed LONG LONG api name ( hb_itemGetNDL and similar names was from the 
      old "long double" soupport)
    ! HB_IT_LONGLONG is now 0x0040; 0x0015 (as it was before) 
      would have fooled  many bit-oriented ifs.

  * include/hbdefs.h
    + Added ULONGLONG for unsigned long long integers.

  * source/rtl/hbsrlraw.c
    + Added LONG LONG suport

  *  tests/serialize.prg
    + Added check to serialize Directory() return, containing a long long.

2003-07-10 12:45 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  + include/hblog.ch
  + include/hblogdef.ch
  + source/rtl/hblog.prg
  + source/rtl/hbsyslog.c
    + Added HB logging system

  * source/rtl/Makefile
    + Added log compilation support in rtl

  * tests/Makefile
    ! More strict rules to compile test files (-es2 -w2 added to cmd line)

  + tests/logtest.prg
    + Added a test to show the log system

2003-07-10 14:00 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * include/hbver.h
     ! Change CVS log entry information for Build 82

2003-07-08 00:07 UTC+0200 Giancarlo Niccolai <giancarlo@niccolai.ws>
   * source/rtl/philes.c
     ! Fixed path separator definitions ( comment in NG by Gianluca
       Piemonte):
        -HB_OsPathSeparator() --> "/" or "\".. is the separator that
         keeps together a path

        -HB_OsPathListSeparator() --> ";" or ":" Is the character
         (commonly) used to separate two or more complete paths in a
         variable, or in a list of paths

        -HB_OsPathDelimiters() --> "\/:" or "/" Is a string containg
         characters that should not be used in paths, as they are
         meant for splitting/parsing paths.
